first commit done 60%

--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,870 @@
-/*# sourceMappingURL=main.css.map */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Lexend Deca";
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+/* space-mono-regular - latin */
+/* space-mono-regular - latin */
+@font-face {
+  font-family: "Space Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""), url("../fonts/space-mono-v11-latin-regular.woff2") format("woff2"), url("../fonts/space-mono-v11-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* space-mono-700 - latin */
+@font-face {
+  font-family: "Space Mono";
+  font-style: normal;
+  font-weight: 700;
+  src: local(""), url("../fonts/space-mono-v11-latin-700.woff2") format("woff2"), url("../fonts/space-mono-v11-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* lexend-deca-regular - latin */
+@font-face {
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""), url("../fonts/lexend-deca-v17-latin-regular.woff2") format("woff2"), url("../fonts/lexend-deca-v17-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted; /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type=search] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
+.container {
+  max-width: 1153px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 1113px) {
+  .container {
+    max-width: 603px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 573px) {
+  .container {
+    max-width: 331px;
+    padding: 0 30px;
+    margin: 0 auto;
+  }
+}
+.big-container {
+  width: 1105px;
+  margin: 0 auto;
+}
+
+.btn {
+  padding: 14px 0;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 25px;
+  border: none;
+  width: 180px;
+  background-color: #FCB72B;
+  text-align: center;
+}
+.btn a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.header-navigation {
+  max-width: 100%;
+}
+
+.header-logo {
+  width: 107px;
+  height: 28px;
+  margin-right: 58px;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 34px 0;
+}
+.nav a {
+  text-decoration: none;
+}
+
+.nav-wrapper {
+  display: flex;
+  align-items: center;
+}
+.nav-wrapper a {
+  text-decoration: none;
+}
+
+.burger {
+  width: 19px;
+  height: 16px;
+  display: none;
+  border: none;
+}
+
+.navigation {
+  list-style-type: none;
+}
+.navigation li {
+  display: inline-block;
+  margin-right: 32px;
+}
+.navigation li:last-child {
+  margin-right: 0;
+}
+.navigation li a {
+  text-decoration: none;
+  font-family: "Space Mono";
+  font-weight: 700;
+  color: #939CAA;
+}
+.navigation .nav-btn__link {
+  color: #fff;
+}
+
+@media only screen and (max-width: 573px) {
+  .big-container {
+    max-width: 311px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .header-logo {
+    width: 75px;
+    height: 20px;
+  }
+  .navigation-btn {
+    display: none;
+  }
+  .navigation {
+    display: none;
+  }
+  .burger {
+    display: block;
+    margin-right: 98px;
+  }
+  .nav {
+    padding: 22px 0;
+    display: flex;
+    justify-content: start;
+  }
+}
+@media only screen and (max-width: 1113px) {
+  .header-navigation {
+    max-width: 100%;
+  }
+  .big-container {
+    width: 695px;
+    padding: 0 5px;
+    margin: 0 auto;
+  }
+}
+.intro {
+  width: 100%;
+  background-image: url(../assets/images/descktop-intro-bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow-x: hidden;
+  margin-bottom: 160px;
+}
+.intro::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #2f3b59;
+  background-position: 100% 100%;
+  opacity: 0.75;
+}
+
+.intro-text {
+  margin: 153px 0 152px 0;
+  position: relative;
+}
+
+.intro-title {
+  width: 515px;
+  font-size: 56px;
+  letter-spacing: -2.5px;
+  line-height: 1;
+  font-family: "Space Mono";
+  color: #fff;
+  margin-bottom: 40px;
+}
+
+.intro-descr {
+  width: 405px;
+  color: #fff !important;
+  color: #939CAA;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.6;
+  margin-bottom: 40px;
+  position: relative;
+}
+.intro-descr::before {
+  position: absolute;
+  content: "";
+  background-image: url(../assets/icons/line.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 40px;
+  left: -310px;
+  width: 260px;
+  height: 15px;
+}
+.intro-descr::after {
+  position: absolute;
+  content: "";
+  background-image: url(../assets/icons/array\ right.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 40px;
+  right: -445px;
+  width: 420px;
+  height: 137px;
+}
+
+.intro-text__items {
+  margin-left: 95px;
+}
+
+@media only screen and (max-width: 1113px) {
+  .intro {
+    background-image: url(../assets/images/tablet-intro-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-bottom: 113px;
+  }
+  .intro-text {
+    width: 100%;
+    max-width: 573px;
+    margin: 135px auto 215px;
+    text-align: center;
+  }
+  .intro-text__items {
+    margin-left: 0;
+  }
+  .intro-title {
+    width: 573px;
+  }
+  .intro-descr {
+    width: 573px;
+  }
+  .intro-descr::before {
+    content: none;
+  }
+  .intro-descr::after {
+    content: "";
+    top: 200px;
+    left: -210px;
+  }
+}
+@media only screen and (max-width: 573px) {
+  .intro {
+    background-image: url(../assets/images/mobile-intro-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-bottom: 120px;
+  }
+  .intro-text {
+    width: 100%;
+    max-width: 311px;
+    margin: 115px auto 179px;
+    text-align: center;
+  }
+  .intro-text__items {
+    margin-left: 0;
+  }
+  .intro-title {
+    width: 311px;
+    font-size: 40px;
+    line-height: 1;
+  }
+  .intro-descr {
+    width: 311px;
+  }
+  .intro-descr::after {
+    top: 220px;
+    left: -325px;
+  }
+}
+.options {
+  position: relative;
+}
+.options::before {
+  content: "";
+  position: absolute;
+  top: 40px;
+  left: -200px;
+  width: 970px;
+  height: 15px;
+  background-color: #E5ECF4;
+  display: block;
+}
+
+.options-item {
+  margin-bottom: 200px;
+  position: relative;
+}
+
+.options-holder {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style-type: none;
+  position: relative;
+}
+.options-holder a {
+  text-decoration: none;
+}
+
+.options-itmes {
+  display: block;
+}
+
+.options__img {
+  width: 95px;
+  height: 95px;
+  background: #FCB72B;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin-bottom: 40px;
+}
+.options__img a {
+  text-decoration: none;
+}
+
+.options-items-title {
+  font-family: "Space Mono";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  margin-bottom: 36px;
+}
+
+.options-items-descr {
+  color: #939CAA;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.6;
+  width: 350px;
+}
+
+@media only screen and (max-width: 1113px) {
+  .options {
+    width: 100%;
+    margin-bottom: 145px;
+  }
+  .options-holder {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .options-holder a {
+    text-decoration: none;
+  }
+  .options-item {
+    display: flex;
+    margin-bottom: 40px;
+  }
+  .options-item:last-child {
+    margin-bottom: 0;
+  }
+  .options__img {
+    margin-right: 80px;
+  }
+  .options::before {
+    content: "";
+    width: 15px;
+    height: 512px;
+    left: 65px;
+    top: -112px;
+  }
+}
+@media only screen and (max-width: 573px) {
+  .options {
+    width: 100%;
+    margin-bottom: 120px;
+  }
+  .options::before {
+    content: none;
+  }
+  .options-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .options-item a {
+    text-decoration: none;
+  }
+  .options__img {
+    width: 56px;
+    height: 56px;
+    padding: 17px;
+    display: flex;
+    align-items: center;
+    margin: 0 0 30px 0;
+  }
+  .options__img img {
+    margin: 0;
+  }
+  .options-items__text {
+    text-align: center;
+  }
+}
+.column-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.column-wrapper a {
+  text-decoration: none;
+}
+
+.column-text__title {
+  width: 471px;
+  font-family: "Space Mono";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 1;
+  color: #333A44;
+  margin-bottom: 24px;
+}
+
+.column-text__descr {
+  width: 471px;
+  color: #939CAA;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.6;
+  margin-bottom: 40px;
+}
+
+.column-img {
+  width: 445px;
+  height: 445px;
+  border-radius: 50%;
+}
+.column-img img {
+  border-radius: 50%;
+}
+
+.telemetry {
+  margin-bottom: 160px;
+}
+
+.telemetry-img {
+  position: relative;
+  box-shadow: 550px 0 #E5ECF4;
+}
+.telemetry-img::after {
+  content: "";
+  position: absolute;
+  width: 735px;
+  height: 150px;
+  top: 65%;
+  right: -150px;
+  background-image: url(../assets/icons/array\ left.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 5;
+}
+
+@media only screen and (max-width: 1113px) {
+  .telemetry {
+    width: 100%;
+  }
+  .telemetry-wrapper {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .telemetry-img {
+    margin-bottom: 56px;
+  }
+  .telemetry-img::after {
+    content: "";
+    width: 745px;
+    right: -165px;
+  }
+  .telemetry-text {
+    text-align: center;
+  }
+  .telemetry-text__descr {
+    margin: 40px 0;
+  }
+}
+@media only screen and (max-width: 573px) {
+  .telemetry {
+    width: 100%;
+    overflow-x: hidden;
+  }
+  .telemetry-img {
+    width: 311px;
+    height: 311px;
+    box-shadow: none;
+    margin-bottom: 56px;
+  }
+  .telemetry-img::after {
+    content: "";
+    position: absolute;
+    right: -433px;
+    top: 50%;
+  }
+  .telemetry-text__title {
+    margin: 0 auto;
+    width: 314px;
+    font-size: 32px;
+    line-height: 1;
+  }
+  .telemetry-text__descr {
+    width: 314px;
+    margin: 32px auto;
+  }
+}
+.city {
+  margin-bottom: 160px;
+}
+
+.city-img {
+  position: relative;
+  box-shadow: -550px 0 #E5ECF4;
+}
+.city-img::after {
+  content: "";
+  position: absolute;
+  width: 735px;
+  height: 100px;
+  top: 65%;
+  right: -150px;
+  background-image: url(../assets/icons/array\ right.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 5;
+}/*# sourceMappingURL=main.css.map */
