--- a/blocks/_options.scss
+++ b/blocks/_options.scss
@@ -4,7 +4,7 @@
         content: '';
         position: absolute;
         top: 40px;
-        left: -200px;
+        left: 0;
         width: 970px;
         height: 15px;
         background-color: #E5ECF4;
@@ -70,8 +70,8 @@
     .options::before{
         content: '';
         width: 15px;
-        height: 512px;
-        left: 65px;
+        height: 514px;
+        left: 160px;
         top: -112px;
         
     }
